--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,7 +1,20 @@
 .container {
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    width: 1200px;
+    width: 100%;
+    padding: 0 15px;
 }
+
+@media screen and (min-width: 480px) {
+    .container {
+        width: 450px;
+        margin: 0 auto;
+    }
+}
+
+
+// .container {
+//     margin-left: auto;
+//     margin-right: auto;
+//     padding-left: 15px;
+//     padding-right: 15px;
+//     width: 1200px;
+// }
