--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -1,8 +1,8 @@
-.header {
-    border-bottom: 1px solid #ECECEC;
-}
+// .header {
+//     border-bottom: 1px solid #ECECEC;
+// }
 
-.header-nav {
-    display: flex;
-    align-items: center;
-}
+// .header-nav {
+//     display: flex;
+//     align-items: center;
+// }
