--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,10 @@ body {
   margin: 0;
 }
 
+.link {
+  text-decoration: none;
+}
+
 h1,
 h2,
 h3,
@@ -61,11 +65,80 @@ img {
   padding: 0 15px;
 }
 
+.header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 @media screen and (min-width: 480px) {
   .container {
     width: 450px;
     margin: 0 auto;
   }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 738px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
+.header {
+  border-bottom: 1px solid #ECECEC;
+}
+
+.mobile-burger-btn,
+.mobile-close-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+.mobile-burger-icon,
+.mobile-close-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.mobile-menu {
+  position: absolute;
+  width: 100%;
+  max-width: 480px;
+  height: 100vh;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(-100%);
+  background-color: var(--primary-write-color);
+  padding-top: 48px;
+  padding-left: 40px;
+  transition: var(--duration) var(--timing-function);
+}
+
+.mobile-menu.is-open {
+  transform: translateX(-50%) translateY(0%);
+}
+
+.mobile-menu-site-item {
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+}
+
+.mobile-menu-site-link {
+  color: var(--primary-text-color);
 }
 
 .logo {
@@ -82,6 +155,14 @@ img {
 
 .logo-title {
   color: var(--accent-color);
+}
+
+.site-nav {
+  display: none;
+}
+
+.auth-nav {
+  display: none;
 }
 
 .icon-nav {
