--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,6 +1,12 @@
 .container {
     width: 100%;
     padding: 0 15px;
+
+    .header & {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
 
 @media screen and (min-width: 480px) {
@@ -10,11 +16,16 @@
     }
 }
 
+@media screen and (min-width: 768px) {
+    .container {
+        width: 738px;
+    }
+}
 
-// .container {
-//     margin-left: auto;
-//     margin-right: auto;
-//     padding-left: 15px;
-//     padding-right: 15px;
-//     width: 1200px;
-// }
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1200px;
+    }
+}
+
+
