--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -1,8 +1,59 @@
-// .header {
-//     border-bottom: 1px solid #ECECEC;
-// }
 
-// .header-nav {
-//     display: flex;
-//     align-items: center;
-// }
+
+.header {
+    border-bottom: 1px solid #ECECEC;
+}
+
+
+.mobile-burger-btn,
+.mobile-close-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+}
+
+.mobile-burger-icon,
+.mobile-close-icon {
+    width: 40px;
+    height: 40px;
+}
+
+.mobile-close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+}
+
+.mobile-menu {
+    position: absolute;
+    width: 100%;
+    max-width: 480px;
+    height: 100vh;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-100%);
+    background-color: var(--primary-write-color);
+    padding-top: 48px;
+    padding-left: 40px;
+
+    transition: var(--duration) var(--timing-function);
+}
+
+.mobile-menu.is-open {
+    transform: translateX(-50%) translateY(0%);
+}
+
+.mobile-menu-site-item {
+    font-size: 40px;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
+
+}
+
+.mobile-menu-site-link {
+    color: var(--primary-text-color);
+}
+
+.mobile-menu-site-link.current {
+  color: var(--accent-color);
+}
