--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -12,13 +12,19 @@
 @media screen and (min-width: 480px) {
     .container {
         width: 450px;
-        margin: 0 auto;
+        // margin: 0 auto;
     }
 }
 
 @media screen and (min-width: 768px) {
     .container {
         width: 738px;
+        // margin: 0;
+
+        .header & {
+            display: flex;
+            align-items: center;
+        }
     }
 }
 
