--- a/sass/components/_auth-nav.scss
+++ b/sass/components/_auth-nav.scss
@@ -1,6 +1,29 @@
-.auth-nav {
-    display: none;
+@media screen and (min-width: 768px) {
+    .auth-nav-link {
+        display: flex;
+        align-items: center;
+        color: var(--title-text-color);
+        line-height: 1.14;
+        text-decoration: none;
+        transition: color var(--duration) var(--timing-function);
+
+           &:hover,
+           &:focus {
+               color: var(--accent-color);
+           }
+    }
+
+    .auth-nav-link:hover .icon-nav,
+    .auth-nav-link:focus .icon-nav {
+        fill: var(--accent-color);
+    }
 }
+
+
+ .auth-nav-item:not(:last-child) {
+    margin-bottom: 10px;
+}
+
 
 // .auth-nav {
 //     display: flex;
