--- a/sass/layout/_logo.scss
+++ b/sass/layout/_logo.scss
@@ -1,15 +1,49 @@
-.logo {
-    display: inline-block;
-    padding-top: 24px;
-    padding-bottom: 25px;
-    margin-right: 93px;
+@media screen and (min-width: 320px) {
+    .logo {
+        display: inline-block;
+        padding-top: 16px;
+        padding-bottom: 16px;
 
-    color: var(--logo-black-color);
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    text-decoration: none;
+        color: var(--logo-black-color);
+        font-family: Raleway,
+        sans-serif;
+        font-weight: 700;
+        font-size: 26px;
+        text-decoration: none;
+    }
+
 }
+
+
+@media screen and (min-width: 768px) {
+   .logo {
+       display: inline-block;
+       padding-top: 26px;
+       padding-bottom: 26px;
+       margin-right: 88px;
+
+       color: var(--logo-black-color);
+       font-family: Raleway, sans-serif;
+       font-weight: 700;
+       font-size: 26px;
+       text-decoration: none;
+   }
+
+}
+
+
+// .logo {
+//     display: inline-block;
+//     padding-top: 24px;
+//     padding-bottom: 25px;
+//     margin-right: 93px;
+
+//     color: var(--logo-black-color);
+//     font-family: Raleway, sans-serif;
+//     font-weight: 700;
+//     font-size: 26px;
+//     text-decoration: none;
+// }
 
 .logo-title {
     color: var(--accent-color);
