--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -5,55 +5,121 @@
 }
 
 
-.mobile-burger-btn,
-.mobile-close-btn {
-    background-color: transparent;
-    border: none;
-    padding: 0;
+
+
+@media screen and (max-width: 767px) {
+    .mobile-burger-btn,
+    .mobile-close-btn {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+    }
+
+    .mobile-burger-icon,
+    .mobile-close-icon {
+        width: 40px;
+        height: 40px;
+    }
+
+    .mobile-close-btn {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+    }
+
+    .mobile-menu {
+        position: absolute;
+        width: 100%;
+        max-width: 100vw;
+        height: 100vh;
+        top: 0;
+        left: 50%;
+        transform:  translateX(-50%) translateY(-100%);
+        background-color: var(--primary-write-color);
+        padding-top: 48px;
+        padding-left: 40px;
+        transition: var(--duration) var(--timing-function);
+
+        &.is-open {
+            transform: translateX(-50%) translateY(0%);
+        }
+    }
+
+    .mobile-menu-site-item {
+        font-size: 40px;
+        line-height: 1.175;
+        letter-spacing: 0.02em;
+    }
+
+    .mobile-menu-site-item:not(:last-child) {
+        margin-bottom: 32px;
+    }
+
+
+    .mobile-menu-site-link {
+        color: var(--primary-text-color);
+
+        &.current {
+            color: var(--accent-color);
+        }
+    }
+
+    .mobile-menu-auth-item:not(:last-child) {
+        margin-top: 302px;
+        margin-bottom: 32px;
+    }
+
+    .mobile-menu-auth-link-tel {
+        color: var(--accent-color);
+        font-size: 34px;
+        line-height: 1.176;
+        letter-spacing: 0.02em;
+    }
+
+    .mobile-menu-auth-link-mail {
+        font-size: 24px;
+        line-height: 1.166;
+        letter-spacing: 0.02em;
+        color: var(--title-text-color);
+    }
+
+
+    .mobile-menu-social {
+        display: flex;
+        margin-top: 64px;
+    }
+
+
+    .mobile-menu-social-link {
+        font-size: 18px;
+        line-height: 1.222;
+        letter-spacing: 0.02em;
+        color: var(--accent-color);
+
+        &::after {
+            content: "";
+            border: 1px solid rgba(33, 33, 33, 0.2);
+            margin-left: 10px;
+            margin-right: 10px;
+
+        }
+    }
+    .site-nav {
+        display: none;
+    }
+
+    .auth-nav {
+        display: none;
+    }
 }
 
-.mobile-burger-icon,
-.mobile-close-icon {
-    width: 40px;
-    height: 40px;
-}
+ @media screen and (min-width: 768px) {
+     .mobile-burger-btn {
+         display: none;
+     }
 
-.mobile-close-btn {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-}
+     .mobile-menu {
+         display: none;
+     }
 
-.mobile-menu {
-    position: absolute;
-    width: 100%;
-    max-width: 480px;
-    height: 100vh;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(-100%);
-    background-color: var(--primary-write-color);
-    padding-top: 48px;
-    padding-left: 40px;
-
-    transition: var(--duration) var(--timing-function);
-}
-
-.mobile-menu.is-open {
-    transform: translateX(-50%) translateY(0%);
-}
-
-.mobile-menu-site-item {
-    font-size: 40px;
-    line-height: 1.175;
-    letter-spacing: 0.02em;
-
-}
-
-.mobile-menu-site-link {
-    color: var(--primary-text-color);
-}
-
-.mobile-menu-site-link.current {
-  color: var(--accent-color);
-}
+ }
