--- a/css/main.css
+++ b/css/main.css
@@ -123,15 +123,15 @@ img {
     max-width: 100vw;
     height: 100vh;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(-100%);
+    left: 0;
+    transform: translateX(-100%);
     background-color: var(--primary-write-color);
     padding-top: 48px;
     padding-left: 40px;
     transition: var(--duration) var(--timing-function);
   }
   .mobile-menu.is-open {
-    transform: translateX(-50%) translateY(0%);
+    transform: translateX(0%);
   }
   .mobile-menu-site-item {
     font-size: 40px;
@@ -339,7 +339,7 @@ img {
 }
 
 @media (min-resolution: 2dppx) {
-  .overlay {
+  .overlay .overlay {
     background-image: url(../images/images/mobile/hero-mobile@2x.jpg);
   }
 }
@@ -349,6 +349,18 @@ img {
   text-align: center;
   padding-top: 118px;
   padding-bottom: 188px;
+}
+
+.hero-title {
+  width: 360px;
+  margin: 0 auto 30px;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.615;
+  text-align: center;
+  letter-spacing: .06em;
+  text-transform: uppercase;
+  color: var(--primary-write-color);
 }
 
 .section-progress {
@@ -524,6 +536,19 @@ img {
 .social-list-link:hover .social-list-icon,
 .social-list-link:focus .social-list-icon {
   fill: var(--primary-write-color);
+}
+
+.hero-btn {
+  min-width: 200px;
+  border-radius: 4px;
+  border-color: transparent;
+  padding: 10px 32px;
+  cursor: pointer;
+  color: var(--primary-write-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
 }
 
 .content {
