--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -33,23 +33,18 @@
         max-width: 100vw;
         height: 100vh;
         top: 0;
-        left: 50%;
-        transform: translateX(-50%) translateY(-100%);
+        left: 0;
+        transform: translateX(-100%);
         background-color: var(--primary-write-color);
         padding-top: 48px;
         padding-left: 40px;
         transition: var(--duration) var(--timing-function);
+        
 
         &.is-open {
-            transform: translateX(-50%) translateY(0%);
+            transform: translateX(0%);
         }
     }
-
-    // top: 0;
-    // left: 50%;
-    // transform: translateX(-50%) translateY(-100%);
-    
-    // transform: translateX(-50%) translateY(0%);
 
     .mobile-menu-site-item {
         font-size: 40px;
