--- a/sass/layout/_overlay.scss
+++ b/sass/layout/_overlay.scss
@@ -1,8 +1,8 @@
   .overlay {
-      max-width: 480px;
-    //   height: 400px;
-      margin-right: auto;
-      margin-left: auto;
+      // max-width: 480px;
+      height: 400px;
+      // margin-right: auto;
+      // margin-left: auto;
       background-image: linear-gradient(to right,
               var(--bg-gradient),
               var(--bg-gradient)),
