--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,5 +1,5 @@
 .container {
-    width: 100%;
+    width: 100vw;
     padding: 0 15px;
 
     .header & {
@@ -11,7 +11,7 @@
 
 @media screen and (min-width: 480px) {
     .container {
-        width: 450px;
+        width: 480px;
         margin: 0 auto;
     }
 }
