--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,16 +1,3 @@
-.features {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.features-item {
-    max-width: 270px;
-
-    &:not(:last-child) {
-        margin-right: 30px;
-    }
-}
-
 .features-thumb {
     display: flex;
     justify-content: center;
@@ -19,3 +6,87 @@
     margin-bottom: 30px;
     background-color: var(--subsecondary-bg-color);
 }
+
+.features-item:not(:last-child) {
+        margin-bottom: 30px;
+}
+
+
+
+@media screen and (min-width: 768px) {
+   .features {
+       display: flex;
+       flex-wrap: wrap;
+   }
+
+   .features-item {
+       max-width: 354px;
+
+       &:nth-child(odd) {
+           margin-right: 30px;
+       }
+
+       &:nth-child(-n+2) {
+           margin-bottom: 30px;
+       }
+   }
+
+   .features-thumb {
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       height: 120px;
+       background-color: var(--subsecondary-bg-color);
+   }
+}
+
+@media screen and (min-width: 1200px) {
+    .features {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .features-item {
+        max-width: 270px;
+
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+    }
+
+    .features-thumb {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 120px;
+        margin-bottom: 30px;
+        background-color: var(--subsecondary-bg-color);
+    }
+}
+   
+
+ 
+
+
+
+// .features {
+//     display: flex;
+//     flex-wrap: wrap;
+// }
+
+// .features-item {
+//     max-width: 270px;
+
+//     &:not(:last-child) {
+//         margin-right: 30px;
+//     }
+// }
+
+// .features-thumb {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     height: 120px;
+//     margin-bottom: 30px;
+//     background-color: var(--subsecondary-bg-color);
+// }
