--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -18,10 +18,19 @@
     color: var(--primary-write-color);
 }
 
-// @media screen and (min-width: 480px) {
-//     .hero {
-    
-//         padding-top: 200px;
-//         padding-bottom: 200px;
-//     }
-// }
+@media screen and (min-width: 1200px) {
+    .hero {
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
+
+    .hero-title {
+        max-width: 696px;
+        font-size: 44px;
+        line-height: 1.363;
+
+        
+    }
+}
+
+
