--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -1,15 +1,16 @@
-.section-progress {
-    padding-top: 94px;
-    padding-bottom: 94px;
+@media screen and (max-width: 768px) {
+    .section-subtitle {
+        text-align: center;
+    }
+
 }
 
 .section-specifics {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .section-subtitle {
-    margin-top: 0;
     margin-bottom: 10px;
 
     color: var(--primary-text-color);
@@ -18,106 +19,196 @@
 }
 
 .section-text {
-    margin: 0 0;
-
     font-weight: 400;
-    color: var(--title-text-color);
     line-height: 1.7;
-}
-
-.section-function {
-    padding-bottom: 94px;
-}
-
-.section-title {
-    margin-top: 0;
-    margin-bottom: 50px;
-
-    color: var(--primary-text-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-}
-
-.section-work {
-    display: flex;
-}
-
-.section-work-list {
-    width: 370px;
-
-    &:not(:last-child) {
-        margin-right: 30px;
-    }
-}
-
-.section-work-item {
-    position: relative;
-}
-
-.section-work-name {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    min-height: 70px;
-    padding-top: 27px;
-    padding-bottom: 27px;
-    background-color: rgba(47, 48, 58, 0.8);
-}
-
-.section-work-text {
-    font-weight: 700;
-    line-height: 1.14;
-    color: var(--primary-write-color);
-    text-align: center;
     letter-spacing: 0.03em;
 }
 
-    .command {
-        padding-top: 94px;
-        padding-bottom: 94px;
-        background-color: var(--subsecondary-bg-color);
-    }
+//  @media screen and (max-width: 1200px) {
+//       .section-function {
+//           display: none;
+//       }
 
-    .section-command {
-        display: flex;
-    }
+//  }
 
-    .section-command-item {
-        width: 270px;
+ @media screen and (max-width: 1200px) {
+  .section-function {
+      display: none;
+  }
+}
 
-        box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
-            0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-        border-radius: 0px 0px 4px 4px;
+  .section-function {
+      padding-bottom: 94px;
+  }
 
-        &:not(:last-child) {
-            margin-right: 30px;
-        }
-    }
+  .section-title {
+      margin-top: 0;
+      margin-bottom: 50px;
 
-    .masters-contact {
-        text-align: center;
+      color: var(--primary-text-color);
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 1.16;
+      text-align: center;
+  }
 
-        border-radius: 0px 0px 4px 4px;
+  .section-work {
+      display: flex;
+  }
 
-        padding: 30px 32px;
-        width: 270px;
-        background-color: var(--primary-write-color);
-    }
+  .section-work-list {
+      width: 370px;
 
-    .section-team {
-        font-weight: 500;
-        margin-bottom: 10px;
+      &:not(:last-child) {
+          margin-right: 30px;
+      }
+  }
 
-        color: var(--primary-text-color);
-        font-size: 16px;
-    }
+  .section-work-item {
+      position: relative;
+  }
 
-    .section-team-text {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.9;
-        margin-bottom: 16px;
-    }
+  .section-work-name {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      min-height: 70px;
+      padding-top: 27px;
+      padding-bottom: 27px;
+      background-color: rgba(47, 48, 58, 0.8);
+  }
+
+  .section-work-text {
+      font-weight: 700;
+      line-height: 1.14;
+      color: var(--primary-write-color);
+      text-align: center;
+      letter-spacing: 0.03em;
+  }
+
+
+
+// .section-progress {
+//     padding-top: 94px;
+//     padding-bottom: 94px;
+// }
+
+// .section-specifics {
+//     padding-top: 94px;
+//     padding-bottom: 94px;
+// }
+
+// .section-subtitle {
+//     margin-top: 0;
+//     margin-bottom: 10px;
+
+//     color: var(--primary-text-color);
+//     font-weight: 700;
+//     text-transform: uppercase;
+// }
+
+// .section-text {
+//     margin: 0 0;
+
+//     font-weight: 400;
+//     color: var(--title-text-color);
+//     line-height: 1.7;
+// }
+
+// .section-function {
+//     padding-bottom: 94px;
+// }
+
+// .section-title {
+//     margin-top: 0;
+//     margin-bottom: 50px;
+
+//     color: var(--primary-text-color);
+//     font-weight: 700;
+//     font-size: 36px;
+//     line-height: 1.16;
+//     text-align: center;
+// }
+
+// .section-work {
+//     display: flex;
+// }
+
+// .section-work-list {
+//     width: 370px;
+
+//     &:not(:last-child) {
+//         margin-right: 30px;
+//     }
+// }
+
+// .section-work-item {
+//     position: relative;
+// }
+
+// .section-work-name {
+//     position: absolute;
+//     left: 0;
+//     bottom: 0;
+//     width: 100%;
+//     min-height: 70px;
+//     padding-top: 27px;
+//     padding-bottom: 27px;
+//     background-color: rgba(47, 48, 58, 0.8);
+// }
+
+// .section-work-text {
+//     font-weight: 700;
+//     line-height: 1.14;
+//     color: var(--primary-write-color);
+//     text-align: center;
+//     letter-spacing: 0.03em;
+// }
+
+//     .command {
+//         padding-top: 94px;
+//         padding-bottom: 94px;
+//         background-color: var(--subsecondary-bg-color);
+//     }
+
+//     .section-command {
+//         display: flex;
+//     }
+
+//     .section-command-item {
+//         width: 270px;
+
+//         box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+//             0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+//         border-radius: 0px 0px 4px 4px;
+
+//         &:not(:last-child) {
+//             margin-right: 30px;
+//         }
+//     }
+
+//     .masters-contact {
+//         text-align: center;
+
+//         border-radius: 0px 0px 4px 4px;
+
+//         padding: 30px 32px;
+//         width: 270px;
+//         background-color: var(--primary-write-color);
+//     }
+
+//     .section-team {
+//         font-weight: 500;
+//         margin-bottom: 10px;
+
+//         color: var(--primary-text-color);
+//         font-size: 16px;
+//     }
+
+//     .section-team-text {
+//         font-weight: 400;
+//         font-size: 16px;
+//         line-height: 1.9;
+//         margin-bottom: 16px;
+//     }
