--- a/css/main.css
+++ b/css/main.css
@@ -483,6 +483,62 @@ img {
   letter-spacing: 0.03em;
 }
 
+.command {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: var(--subsecondary-bg-color);
+}
+
+.section-command-item {
+  max-width: 450px;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.masters-contact {
+  text-align: center;
+  border-radius: 0px 0px 4px 4px;
+  padding: 30px 32px;
+  max-width: 450px;
+  background-color: var(--primary-write-color);
+}
+
+.section-team {
+  font-weight: 500;
+  margin-bottom: 10px;
+  color: var(--primary-text-color);
+  font-size: 16px;
+}
+
+.section-team-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.187;
+  margin-bottom: 16px;
+}
+
+@media screen and (max-width: 480px) {
+  .section-command-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .section-command {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .section-command-item {
+    max-width: 354px;
+  }
+  .section-command-item:nth-child(odd) {
+    margin-right: 30px;
+  }
+  .section-command-item:nth-child(-n+2) {
+    margin-bottom: 30px;
+  }
+}
+
 .features-thumb {
   display: flex;
   justify-content: center;
@@ -575,6 +631,16 @@ img {
 .social-list-link:hover .social-list-icon,
 .social-list-link:focus .social-list-icon {
   fill: var(--primary-write-color);
+}
+
+@media screen and (max-width: 768px) {
+  .social-list {
+    display: flex;
+    justify-content: center;
+  }
+  .social-list-item:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 
 .hero-btn {
