--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -24,12 +24,6 @@
     letter-spacing: 0.03em;
 }
 
-//  @media screen and (max-width: 1200px) {
-//       .section-function {
-//           display: none;
-//       }
-
-//  }
 
  @media screen and (max-width: 1200px) {
   .section-function {
@@ -86,6 +80,125 @@
       text-align: center;
       letter-spacing: 0.03em;
   }
+
+   .command {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    background-color: var(--subsecondary-bg-color);
+    }
+
+     .section-command-item {
+    max-width: 450px;
+
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+            0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 0px 0px 4px 4px;
+        // &:not(:last-child) {
+        //      margin-bottom: 30px;
+        // }
+    }
+
+    .masters-contact {
+        text-align: center;
+
+        border-radius: 0px 0px 4px 4px;
+
+        padding: 30px 32px;
+        max-width: 450px;
+        background-color: var(--primary-write-color);
+    }
+
+    .section-team {
+            font-weight: 500;
+        margin-bottom: 10px;
+
+        color: var(--primary-text-color);
+        font-size: 16px;
+    }
+
+    .section-team-text {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.187;
+        margin-bottom: 16px;
+    }
+
+    @media screen and (max-width: 480px) {
+        .section-command-item:not(:last-child) {
+             margin-bottom: 30px;
+        }
+    }
+
+     @media screen and (min-width: 768px) {
+         .section-command {
+               display: flex;
+               flex-wrap: wrap;
+         }
+
+            .section-command-item {
+                max-width: 354px;
+
+                 &:nth-child(odd) {
+                     margin-right: 30px;
+                 }
+
+                 &:nth-child(-n+2) {
+                     margin-bottom: 30px;
+                 }
+            }
+     }
+
+     @media screen and (min-width: 1200px) {
+         //     .command {
+         //         padding-top: 94px;
+         //         padding-bottom: 94px;
+         //         background-color: var(--subsecondary-bg-color);
+         //     }
+
+         //     .section-command {
+         //         display: flex;
+         //     }
+
+         //     .section-command-item {
+         //         width: 270px;
+
+         //         box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+         //             0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+         //         border-radius: 0px 0px 4px 4px;
+
+         //         &:not(:last-child) {
+         //             margin-right: 30px;
+         //         }
+         //     }
+
+         //     .masters-contact {
+         //         text-align: center;
+
+         //         border-radius: 0px 0px 4px 4px;
+
+         //         padding: 30px 32px;
+         //         width: 270px;
+         //         background-color: var(--primary-write-color);
+         //     }
+
+         //     .section-team {
+         //         font-weight: 500;
+         //         margin-bottom: 10px;
+
+         //         color: var(--primary-text-color);
+         //         font-size: 16px;
+         //     }
+
+         //     .section-team-text {
+         //         font-weight: 400;
+         //         font-size: 16px;
+         //         line-height: 1.9;
+         //         margin-bottom: 16px;
+         //     }
+
+     }
+
+      
 
 
 
