--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -14,6 +14,8 @@
         width: 480px;
         margin: 0 auto;
     }
+
+     
 }
 
 @media screen and (min-width: 768px) {
@@ -24,6 +26,11 @@
             display: flex;
             align-items: center;
         }
+
+        // .company-clients & {
+        //     display: flex;
+        //     flex-wrap: wrap;
+        // }
     }
 }
 
