--- a/sass/layout/_company.scss
+++ b/sass/layout/_company.scss
@@ -1,33 +1,79 @@
-.company-clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+@media screen and (max-width: 480px) {
+    .company-clients {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+
+    .company-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: -15px;
+        
+    }
+
+    .company-list-item {
+        width: 210px;
+        height: 90px;
+        margin: 15px;
+
+
+        // &:nth-child(-n+4) {
+        //     margin-bottom: 30px;
+        // }
+
+    }
+
+    .company-list-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid var(--icon-color);
+        border-radius: 4px;
+        width: 100%;
+        height: 100%;
+        fill: var(--icon-color);
+        transition: border var(--duration) var(--timing-function);
+
+         &:hover,
+         &:focus {
+             border-color: var(--accent-color);
+         }
+    }
 }
 
-.company-list {
-    display: flex;
-    justify-content: space-between;
-}
 
-.company-list-item {
-    width: 170px;
-    height: 90px;
-}
 
-.company-list-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid var(--icon-color);
-    border-radius: 4px;
-    width: 100%;
-    height: 100%;
-    fill: var(--icon-color);
-    transition: border var(--duration) var(--timing-function);
+// .company-clients {
+//     padding-top: 94px;
+//     padding-bottom: 94px;
+// }
 
-     &:hover,
-     &:focus {
-         border-color: var(--accent-color);
-     }
-}
+// .company-list {
+//     display: flex;
+//     justify-content: space-between;
+// }
+
+// .company-list-item {
+//     width: 170px;
+//     height: 90px;
+// }
+
+// .company-list-link {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     border: 1px solid var(--icon-color);
+//     border-radius: 4px;
+//     width: 100%;
+//     height: 100%;
+//     fill: var(--icon-color);
+//     transition: border var(--duration) var(--timing-function);
+
+//      &:hover,
+//      &:focus {
+//          border-color: var(--accent-color);
+//      }
+// }
 
 
