--- a/css/main.css
+++ b/css/main.css
@@ -527,15 +527,48 @@ img {
   .section-command {
     display: flex;
     flex-wrap: wrap;
+    margin: -15px;
   }
   .section-command-item {
     max-width: 354px;
+    margin: 15px;
   }
-  .section-command-item:nth-child(odd) {
-    margin-right: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .command {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    background-color: var(--subsecondary-bg-color);
   }
-  .section-command-item:nth-child(-n+2) {
-    margin-bottom: 30px;
+  .section-command {
+    display: flex;
+    margin: -15px;
+  }
+  .section-command-item {
+    width: 270px;
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 0px 0px 4px 4px;
+    margin: 15px;
+  }
+  .masters-contact {
+    text-align: center;
+    border-radius: 0px 0px 4px 4px;
+    padding: 30px 32px;
+    width: 270px;
+    background-color: var(--primary-write-color);
+  }
+  .section-team {
+    font-weight: 500;
+    margin-bottom: 10px;
+    color: var(--primary-text-color);
+    font-size: 16px;
+  }
+  .section-team-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.9;
+    margin-bottom: 16px;
   }
 }
 
@@ -633,7 +666,17 @@ img {
   fill: var(--primary-write-color);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 480px) {
+  .social-list {
+    display: flex;
+    justify-content: center;
+  }
+  .social-list-item:not(:last-child) {
+    margin-right: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .social-list {
     display: flex;
     justify-content: center;
@@ -715,35 +758,36 @@ img {
   line-height: 1.9;
 }
 
-.company-clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.company-list {
-  display: flex;
-  justify-content: space-between;
-}
-
-.company-list-item {
-  width: 170px;
-  height: 90px;
-}
-
-.company-list-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid var(--icon-color);
-  border-radius: 4px;
-  width: 100%;
-  height: 100%;
-  fill: var(--icon-color);
-  transition: border var(--duration) var(--timing-function);
-}
-
-.company-list-link:hover, .company-list-link:focus {
-  border-color: var(--accent-color);
+@media screen and (max-width: 480px) {
+  .company-clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .company-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: -15px;
+  }
+  .company-list-item {
+    width: 210px;
+    height: 90px;
+    margin: 15px;
+  }
+  .company-list-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--icon-color);
+    border-radius: 4px;
+    width: 100%;
+    height: 100%;
+    fill: var(--icon-color);
+    transition: border var(--duration) var(--timing-function);
+  }
+  .company-list-link:hover, .company-list-link:focus {
+    border-color: var(--accent-color);
+  }
 }
 
 .company-list-icon {
