--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -133,68 +133,73 @@
          .section-command {
                display: flex;
                flex-wrap: wrap;
+               margin: -15px;
          }
 
             .section-command-item {
                 max-width: 354px;
+                margin: 15px;
 
-                 &:nth-child(odd) {
-                     margin-right: 30px;
-                 }
+                //  &:nth-child(odd) {
+                //      margin-right: 30px;
+                //  }
 
-                 &:nth-child(-n+2) {
-                     margin-bottom: 30px;
-                 }
+                //  &:nth-child(-n+2) {
+                //      margin-bottom: 30px;
+                //  }
             }
      }
 
      @media screen and (min-width: 1200px) {
-         //     .command {
-         //         padding-top: 94px;
-         //         padding-bottom: 94px;
-         //         background-color: var(--subsecondary-bg-color);
-         //     }
+             .command {
+                 padding-top: 94px;
+                 padding-bottom: 94px;
+                 background-color: var(--subsecondary-bg-color);
+             }
 
-         //     .section-command {
-         //         display: flex;
-         //     }
+             .section-command {
+                 display: flex;
+                 margin: -15px;
+             }
 
-         //     .section-command-item {
-         //         width: 270px;
+             .section-command-item {
+                 width: 270px;
 
-         //         box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
-         //             0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-         //         border-radius: 0px 0px 4px 4px;
+                 box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+                     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+                 border-radius: 0px 0px 4px 4px;
 
-         //         &:not(:last-child) {
-         //             margin-right: 30px;
-         //         }
-         //     }
+                 margin: 15px;
 
-         //     .masters-contact {
-         //         text-align: center;
+                //  &:not(:last-child) {
+                //      margin-right: 30px;
+                //  }
+             }
 
-         //         border-radius: 0px 0px 4px 4px;
+             .masters-contact {
+                 text-align: center;
 
-         //         padding: 30px 32px;
-         //         width: 270px;
-         //         background-color: var(--primary-write-color);
-         //     }
+                 border-radius: 0px 0px 4px 4px;
 
-         //     .section-team {
-         //         font-weight: 500;
-         //         margin-bottom: 10px;
+                 padding: 30px 32px;
+                 width: 270px;
+                 background-color: var(--primary-write-color);
+             }
 
-         //         color: var(--primary-text-color);
-         //         font-size: 16px;
-         //     }
+             .section-team {
+                 font-weight: 500;
+                 margin-bottom: 10px;
 
-         //     .section-team-text {
-         //         font-weight: 400;
-         //         font-size: 16px;
-         //         line-height: 1.9;
-         //         margin-bottom: 16px;
-         //     }
+                 color: var(--primary-text-color);
+                 font-size: 16px;
+             }
+
+             .section-team-text {
+                 font-weight: 400;
+                 font-size: 16px;
+                 line-height: 1.9;
+                 margin-bottom: 16px;
+             }
 
      }
 
