--- a/sass/layout/_social.scss
+++ b/sass/layout/_social.scss
@@ -38,7 +38,20 @@
     }
 }
 
- @media screen and (max-width: 768px) {
+@media screen and (max-width: 480px) {
+    .social-list {
+        display: flex;
+        justify-content: center;
+
+    }
+
+    .social-list-item:not(:last-child) {
+        margin-right: 10px;
+    }
+}
+
+
+ @media screen and (min-width: 768px) {
      .social-list {
          display: flex;
          justify-content: center;
