--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -124,9 +124,24 @@
     }
 
     @media screen and (max-width: 480px) {
-        .section-command-item:not(:last-child) {
-             margin-bottom: 30px;
+        .section-command {
+            margin: -15px;
         }
+
+        .section-command-item {
+            margin: 15px;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+         .section-command {
+             margin: -15px;
+         }
+
+         .section-command-item {
+             margin: 15px;
+         }
+
     }
 
      @media screen and (min-width: 768px) {
@@ -140,13 +155,6 @@
                 max-width: 354px;
                 margin: 15px;
 
-                //  &:nth-child(odd) {
-                //      margin-right: 30px;
-                //  }
-
-                //  &:nth-child(-n+2) {
-                //      margin-bottom: 30px;
-                //  }
             }
      }
 
@@ -171,9 +179,6 @@
 
                  margin: 15px;
 
-                //  &:not(:last-child) {
-                //      margin-right: 30px;
-                //  }
              }
 
              .masters-contact {
