--- a/css/main.css
+++ b/css/main.css
@@ -958,6 +958,7 @@ img {
 .form-footer input {
   width: 100%;
   margin-bottom: 20px;
+  padding: 15px 16px;
   min-height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -982,7 +983,7 @@ img {
   line-height: 1.9;
   letter-spacing: 0.06em;
   width: 200px;
-  min-height: 50px;
+  height: 50px;
   border-color: transparent;
   border-radius: 4px;
   cursor: pointer;
@@ -1037,6 +1038,8 @@ img {
   .footer-nav {
     display: inline-block;
     margin-top: 0;
+    margin-bottom: 0;
+    text-align: initial;
   }
   .footer-nav-item {
     font-weight: 400;
@@ -1047,6 +1050,26 @@ img {
   .footer-social {
     margin-left: 70px;
     width: 206px;
+  }
+  .form-footer {
+    margin: 0 0 0 auto;
+  }
+  .form-footer-text {
+    text-align: initial;
+  }
+  .form-footer-mailing {
+    position: relative;
+    align-items: initial;
+    flex-direction: initial;
+  }
+  .form-footer input {
+    width: 358px;
+    margin-right: 12px;
+  }
+  .form-footer-icon {
+    width: 24px;
+    height: 24px;
+    margin-left: 10px;
   }
 }
 
