--- a/css/main.css
+++ b/css/main.css
@@ -1051,6 +1051,9 @@ img {
     margin-left: 70px;
     width: 206px;
   }
+  .footer-social-list {
+    margin-bottom: 0;
+  }
   .form-footer {
     margin: 0 0 0 auto;
   }
