--- a/sass/layout/_page-footer.scss
+++ b/sass/layout/_page-footer.scss
@@ -204,6 +204,9 @@
        margin-left: 70px;
        width: 206px;
    }
+   .footer-social-list {
+       margin-bottom: 0;
+   }
 
    .form-footer {
        margin: 0 0 0 auto;
