--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -1,3 +1,8 @@
+.section-progress {
+    padding-top: 60px;
+    padding-bottom: 40px;
+}
+
 @media screen and (max-width: 768px) {
     .section-subtitle {
         text-align: center;
