--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -12,6 +12,71 @@
     line-height: 1.875;
 }
 
+.button-nav {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+
+       & .item:not(:last-child) {
+           margin-right: 8.16px;
+       }
+
+        & .btn {
+            color: var(--primary-text-color);
+            background-color: var(--subsecondary-bg-color);
+            font-family: inherit;
+            font-size: 16px;
+            line-height: 1.6;
+            cursor: pointer;
+
+            transition: color var(--duration) var(--timing-function),
+                background-color var(--duration) var(--timing-function),
+                box-shadow var(--duration) var(--timing-function);
+        }
+
+        & .btn:hover,
+        & .btn:focus {
+            color: var(--primary-write-color);
+            background-color: var(--accent-color);
+            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+                0px 1px 2px rgba(0, 0, 0, 0.08),
+                0px 2px 2px rgba(0, 0, 0, 0.12);
+        }
+}
+
+ 
+
+.btn {
+    border: none;
+    border-radius: 4px;
+    padding: 6px 22px;
+
+    color: var(--primary-text-color);
+    background-color: var(--primary-write-color);
+
+    font-weight: 500;
+}
+
+@media screen and (max-width: 767px) {
+    .button-nav .item:nth-child(-n+3) {
+        margin-bottom: 15px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .button-nav {
+        justify-content: center;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .button-nav {
+        justify-content: center;
+        margin-bottom: 35px;
+    }
+}
+
+
 
 
 // .button-nav {
