--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -1,22 +1,13 @@
-.content {
-    display: flex;
-    flex-wrap: wrap;
-}
+
 
 .flex-content {
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-
-    &:nth-child(3n) {
-        margin-right: 0;
-    }
-
-    &:nth-last-child(-n + 3) {
-        margin-bottom: 0;
+    max-width: 450px;
+    
+    
+    &:not(:last-child) {
+        margin-bottom: 30px;
     }
 }
-
 
 .content-link {
     display: block;
@@ -46,14 +37,10 @@
 
 .content-box {
     padding: 20px 24px;
-    width: 370px;
+    max-width: 450px;
     border-right: 1px solid #eeeeee;
     border-bottom: 1px solid #eeeeee;
     border-left: 1px solid #eeeeee;
-}
-
-.content-title {
-    margin-bottom: 4px;
 }
 
 .content-text {
@@ -61,3 +48,110 @@
     font-size: 16px;
     line-height: 1.9;
 }
+
+
+@media screen and (min-width: 768px) {
+    .content {
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+    }
+
+    .content-box {
+        width: 354px;
+    }
+
+    .flex-content {
+        margin: 15px;
+    }
+
+}
+
+@media screen and (min-width: 1200px) {
+    .flex-content {
+        width: 370px;
+        // margin-right: 30px;
+        // margin-bottom: 30px;
+
+        // &:nth-child(3n) {
+        //     margin-right: 0;
+        // }
+
+        // &:nth-last-child(-n + 3) {
+        //     margin-bottom: 0;
+        // }
+    }
+
+    .content-box {
+        width: 370px;
+    }
+}
+
+
+
+
+
+
+// .content {
+//     display: flex;
+//     flex-wrap: wrap;
+// }
+
+// .flex-content {
+//     width: 370px;
+//     margin-right: 30px;
+//     margin-bottom: 30px;
+
+//     &:nth-child(3n) {
+//         margin-right: 0;
+//     }
+
+//     &:nth-last-child(-n + 3) {
+//         margin-bottom: 0;
+//     }
+// }
+
+
+// .content-link {
+//     display: block;
+//     text-decoration: none;
+
+//     transition: box-shadow var(--duration) var(--timing-function);
+
+//     &:hover,
+//     &:focus {
+//         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+//             0px 4px 4px rgba(0, 0, 0, 0.06),
+//             1px 4px 6px rgba(0, 0, 0, 0.16);
+//     }
+
+//     & .content-title {
+//         color: var(--primary-text-color);
+//         font-weight: 700;
+//         font-size: 18px;
+//         line-height: 2;
+//     }
+// }
+
+// .content-wrapper {
+//     position: relative;
+//     overflow: hidden;
+// }
+
+// .content-box {
+//     padding: 20px 24px;
+//     width: 370px;
+//     border-right: 1px solid #eeeeee;
+//     border-bottom: 1px solid #eeeeee;
+//     border-left: 1px solid #eeeeee;
+// }
+
+// .content-title {
+//     margin-bottom: 4px;
+// }
+
+// .content-text {
+//     color: var(--title-text-color);
+//     font-size: 16px;
+//     line-height: 1.9;
+// }
